--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,106 @@
 <!-- contact.html -  -->
-<h1>Contact Form</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DriveHub Motors | Contact Us</title>
 
+    <!-- CSS Files -->
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="mainbar.css">
+</head>
+
+<body>
+
+    <!-- Navbar -->
+    <header>
+        <nav class="navbar">
+            <div class="logo-area">
+                <img src="https://via.placeholder.com/150x50?text=DriveHub+Logo" alt="DriveHub Motors Logo">
+                <h1>DriveHub Motors</h1>
+            </div>
+
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
+                <li><a href="#">Inventory</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Banner -->
+    <section class="hero-banner">
+        <img src="https://via.placeholder.com/1200x350?text=Contact+DriveHub+Motors" 
+             alt="Contact DriveHub Motors Banner">
+        <div class="banner-text">
+            <h2>Contact Us</h2>
+        </div>
+    </section>
+
+    <!-- Contact Layout -->
+    <section class="contact-container">
+
+        <!-- Contact Form -->
+        <div class="contact-form">
+            <h2>Send Us a Message</h2>
+
+            <form action="#" method="POST">
+
+                <label for="name">Full Name</label>
+                <input type="text" id="name" name="name" placeholder="John Doe" required>
+
+                <label for="email">Email Address</label>
+                <input type="email" id="email" name="email" placeholder="example@email.com" required>
+
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" name="phone" placeholder="+254 712 345 678" required>
+
+                <label for="message">Your Message</label>
+                <textarea id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea>
+
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+
+        <!-- Map & Support -->
+        <div class="contact-info">
+
+            <h2>Visit or Reach Us</h2>
+
+            <div class="map-placeholder">
+                <img src="https://via.placeholder.com/500x350?text=Map+Placeholder" 
+                     alt="Map Placeholder">
+            </div>
+
+            <div class="support-details">
+                <h3>Support Contacts</h3>
+
+                <p><strong>Email:</strong> support@drivehubmotors.fake</p>
+                <p><strong>Phone:</strong> +254 701 234 567</p>
+                <p><strong>Office Address:</strong><br>
+                    1234 Westlands Avenue,<br>
+                    Nairobi, Kenya
+                </p>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- Portfolio Notice -->
+    <p class="portfolio-note">
+        *This website is a group coding portfolio project created for learning purposes only.
+        All details, contacts, and images are placeholders.*
+    </p>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2025 DriveHub Motors — All Rights Reserved</p>
+    </footer>
+
+</body>
+</html>
+</body>
+</html>
