--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<<<<<<< HEAD
 //Full homepage Layout
 </h
-=======
 About
 <!DOCTYPE html>
 <html lang="en">
@@ -15,7 +13,7 @@ About
     <link rel="stylesheet" href="mainbar.css">
 </head>
 
-<body> <h1>hello</h1>
+<body> <h1>hello this is kenya </h1>
 
     <!-- Navbar -->
     <header>
@@ -101,4 +99,3 @@ About
 
 </body>
 </html>
->>>>>>> 403a5025906816257f9af6605033f425e8f905e7
