--- a/about.html
+++ b/about.html
@@ -4,25 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DriveHub Motors | About Us</title>
+
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="mainbar.css">
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-        .navbar { display: flex; justify-content: space-between; align-items: center; padding: 1rem; background: #333; color: #fff; }
-        .navbar .logo-area img { height: 50px; margin-right: 10px; }
-        .navbar .nav-links { list-style: none; display: flex; gap: 1rem; }
-        .navbar .nav-links li a { color: #fff; text-decoration: none; }
-        .navbar .nav-links li a.active { text-decoration: underline; }
-        .hero-banner { position: relative; text-align: center; color: white; }
-        .hero-banner img { width: 100%; height: auto; display: block; }
-        .banner-text { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
-        .about-container { padding: 2rem; max-width: 1000px; margin: auto; }
-        .about-container h2 { margin-top: 1rem; }
-        .about-container p { line-height: 1.6; margin-bottom: 1rem; }
-        .values-list { list-style: disc; padding-left: 2rem; margin-bottom: 2rem; }
-        .portfolio-note { text-align: center; font-size: 0.85rem; margin: 2rem 0; color: #555; }
-        footer { background: #222; color: #fff; text-align: center; padding: 1rem; }
-    </style>
 </head>
 <body>
 
@@ -30,7 +14,7 @@
     <header>
         <nav class="navbar">
             <div class="logo-area">
-                <img src="https://via.placeholder.com/150x50?text=DriveHub+Logo" alt="DriveHub Motors Logo">
+                <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?w=600" alt="DriveHub Motors Logo">
                 <h1>DriveHub Motors</h1>
             </div>
 
@@ -49,7 +33,8 @@
 
     <!-- Banner -->
     <section class="hero-banner">
-        <img src="https://via.placeholder.com/1200x350?text=About+DriveHub+Motors" alt="About DriveHub Motors Banner">
+        <img src="https://images.unsplash.com/photo-1549921296-3b4a6b6caadf?w=1600" 
+             alt="About DriveHub Motors Banner">
         <div class="banner-text">
             <h2>About Us</h2>
         </div>
@@ -58,10 +43,16 @@
     <!-- About Content -->
     <section class="about-container">
         <h2>Our Mission</h2>
-        <p>At DriveHub Motors, our mission is to provide high-quality vehicles and outstanding customer service, making car ownership simple and enjoyable for everyone.</p>
+        <p>
+            At DriveHub Motors, our mission is to provide high-quality vehicles and outstanding customer service,
+            making car ownership simple and enjoyable for everyone.
+        </p>
 
         <h2>Our History</h2>
-        <p>DriveHub Motors started as a small family-owned car dealership in Nairobi. Over the years, we have grown into a trusted name in automotive sales, combining experience with innovation to meet the needs of modern drivers.</p>
+        <p>
+            DriveHub Motors started as a small family-owned dealership in Nairobi. Over the years, we have grown
+            into a trusted name in automotive sales, combining experience with innovation to meet the needs of modern drivers.
+        </p>
 
         <h2>Our Values</h2>
         <ul class="values-list">
@@ -73,21 +64,19 @@
         </ul>
     </section>
 
-    <!-- Portfolio Notice -->
+    <!-- Notice -->
     <p class="portfolio-note">
-        This website is a group coding portfolio project created for learning purposes only. All details, contacts, and images are placeholders.
+        This website is a group coding portfolio project created for learning purposes only.
+        All details, contacts, and images are placeholders.
     </p>
 
-    <!-- Footer -->
     <footer>
         <p>© 2025 DriveHub Motors — All Rights Reserved</p>
     </footer>
 
 </body>
-</html> All details, contacts, and images are placeholders.
-    </p>
+</html> All details, contacts, and images are placeholders.</p>
 
-    <!-- Footer -->
     <footer>
         <p>© 2025 DriveHub Motors — All Rights Reserved</p>
     </footer>
