--- a/contact.html
+++ b/contact.html
@@ -4,28 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DriveHub Motors | Contact Us</title>
+
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="mainbar.css">
-    <style>
-        /* fallback CSS */
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-        .navbar { display: flex; justify-content: space-between; align-items: center; padding: 1rem; background: #333; color: #fff; }
-        .navbar .logo-area img { height: 50px; margin-right: 10px; }
-        .navbar .nav-links { list-style: none; display: flex; gap: 1rem; }
-        .navbar .nav-links li a { color: #fff; text-decoration: none; }
-        .navbar .nav-links li a.active { text-decoration: underline; }
-        .hero-banner { position: relative; text-align: center; color: white; }
-        .hero-banner img { width: 100%; height: auto; display: block; }
-        .banner-text { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
-        .contact-container { display: flex; flex-wrap: wrap; gap: 2rem; padding: 2rem; justify-content: center; }
-        .contact-form, .contact-info { flex: 1 1 400px; }
-        form { display: flex; flex-direction: column; gap: 1rem; }
-        input, textarea { padding: 0.5rem; font-size: 1rem; width: 100%; }
-        button { padding: 0.75rem; font-size: 1rem; background: #333; color: #fff; border: none; cursor: pointer; }
-        .map-placeholder img { width: 100%; height: auto; }
-        .portfolio-note { text-align: center; font-size: 0.85rem; margin: 2rem 0; color: #555; }
-        footer { background: #222; color: #fff; text-align: center; padding: 1rem; }
-    </style>
 </head>
 <body>
 
@@ -33,7 +14,7 @@
     <header>
         <nav class="navbar">
             <div class="logo-area">
-                <img src="https://via.placeholder.com/150x50?text=DriveHub+Logo" alt="DriveHub Motors Logo">
+                <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?w=600" alt="DriveHub Motors Logo">
                 <h1>DriveHub Motors</h1>
             </div>
 
@@ -52,7 +33,8 @@
 
     <!-- Banner -->
     <section class="hero-banner">
-        <img src="https://via.placeholder.com/1200x350?text=Contact+DriveHub+Motors" alt="Contact DriveHub Motors Banner">
+        <img src="https://images.unsplash.com/photo-1521790361548-94cbe6ce1736?w=1600" 
+             alt="Contact DriveHub Motors Banner">
         <div class="banner-text">
             <h2>Contact Us</h2>
         </div>
@@ -81,9 +63,12 @@
 
         <div class="contact-info">
             <h2>Visit or Reach Us</h2>
+
             <div class="map-placeholder">
-                <img src="https://via.placeholder.com/500x350?text=Map+Placeholder" alt="Map Placeholder">
+                <img src="https://images.unsplash.com/photo-1502920917128-1aa500764b88?w=1200" 
+                     alt="Map Image">
             </div>
+
             <div class="support-details">
                 <h3>Support Contacts</h3>
                 <p><strong>Email:</strong> support@drivehubmotors.fake</p>
@@ -97,7 +82,8 @@
     </section>
 
     <p class="portfolio-note">
-        This website is a group coding portfolio project created for learning purposes only. All details, contacts, and images are placeholders.
+        This website is a group coding portfolio project created for learning purposes only.
+        All details, contacts, and images are placeholders.
     </p>
 
     <footer>
