--- a/carlisting.html
+++ b/carlisting.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classic Motors | Luxury Car Listings</title>
+    <title> DriveHub Motors | Luxury Car Listings</title>
     <link rel="stylesheet" href="listing.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -18,7 +18,7 @@
                 <div class="logo">
                     <i class="fas fa-car"></i>
                     <div>
-                        <h1>CLASSIC <span>MOTORS</span></h1>
+                        <h1>DriveHub <span>Motors</span></h1>
                         <p class="tagline">Luxury automotive excellence since 1995</p>
                     </div>
                 </div>
@@ -234,7 +234,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Classic Motors</h3>
+                    <h3>DriveHub Motors</h3>
                     <p>Providing exceptional luxury vehicles for over 25 years. Our curated selection represents the pinnacle of automotive engineering and design.</p>
                 </div>
                 <div class="footer-section">
@@ -250,15 +250,15 @@
                 <div class="footer-section">
                     <h3>Contact Us</h3>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> 123 Luxury Avenue, Beverly Hills, CA</li>
-                        <li><i class="fas fa-phone"></i> 1-800-CLASSIC</li>
-                        <li><i class="fas fa-envelope"></i> info@classicmotors.com</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 1234 Westlands Avenue,Nairobi, Kenya</li>
+                        <li><i class="fas fa-phone"></i> +254 701 234 567</li>
+                        <li><i class="fas fa-envelope"></i> support@drivehubmotors.fake</li>
                         <li><i class="fas fa-clock"></i> Mon-Sat: 9am-7pm, Sun: 10am-5pm</li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 Classic Motors. All rights reserved. | Privacy Policy | Terms of Service</p>
+                <p>&copy; 2025 DriveHub Motors. All rights reserved. | Privacy Policy | Terms of Service</p>
             </div>
         </div>
     </footer>
