--- a/contact.html
+++ b/contact.html
@@ -1,94 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DriveHub Motors | Contact Us</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact - DriveHub Motors</title>
 
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="mainbar.css">
+  <!-- Link Your CSS Files -->
+  <link rel="stylesheet" href="styles/navbar.css">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
+
 <body>
 
-    <!-- Navbar -->
-    <header>
-        <nav class="navbar">
-            <div class="logo-area">
-                <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?w=600" alt="DriveHub Motors Logo">
-                <h1>DriveHub Motors</h1>
-            </div>
+  <!-- ======================= -->
+  <!--        NAVBAR           -->
+  <!-- ======================= -->
+  <header>
+    <nav>
+      <div class="logo">
+        <h2>DriveHub Motors</h2>
+      </div>
 
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="cars.html">Cars</a></li>
-                <li><a href="carlisting.html">Car Listing</a></li>
-                <li><a href="car-details.html">Car Details</a></li>
-                <li><a href="cart.html">Cart</a></li>
-                <li><a href="checkout.html">Checkout</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a class="active" href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="cars.html">Cars</a></li>
+        <li><a href="listing.html">Car Listing</a></li>
+        <li><a href="car-details.html">Car Details</a></li>
+        <li><a href="cart.html">Cart</a></li>
+        <li><a href="checkout.html">Checkout</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Banner -->
-    <section class="hero-banner">
-        <img src="https://images.unsplash.com/photo-1521790361548-94cbe6ce1736?w=1600" 
-             alt="Contact DriveHub Motors Banner">
-        <div class="banner-text">
-            <h2>Contact Us</h2>
-        </div>
-    </section>
+  <!-- ======================= -->
+  <!--      CONTACT BANNER    -->
+  <!-- ======================= -->
+  <section class="contact-banner">
+    <img src="assets/contact-banner.jpg" alt="DriveHub Motors Contact Banner">
+  </section>
 
-    <!-- Contact Section -->
-    <section class="contact-container">
-        <div class="contact-form">
-            <h2>Send Us a Message</h2>
-            <form action="#" method="POST">
-                <label for="name">Full Name</label>
-                <input type="text" id="name" name="name" placeholder="John Doe" required>
+  <!-- ======================= -->
+  <!--      CONTACT INFO       -->
+  <!-- ======================= -->
+  <section class="contact-info">
+    <h1>Contact Us</h1>
 
-                <label for="email">Email Address</label>
-                <input type="email" id="email" name="email" placeholder="example@email.com" required>
+    <p><strong>Email:</strong> drivehubmotors@gmail.com</p>
+    <p><strong>Phone:</strong> +254 712 345 678</p>
+    <p><strong>Location:</strong> Nairobi, Kenya</p>
+  </section>
 
-                <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="phone" placeholder="+254 712 345 678" required>
+  <!-- ======================= -->
+  <!--      CONTACT FORM       -->
+  <!-- ======================= -->
+  <section class="contact-form">
+    <h2>Send Us a Message</h2>
 
-                <label for="message">Your Message</label>
-                <textarea id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea>
+    <form>
+      <label for="name">Full Name</label>
+      <input id="name" type="text" placeholder="Your full name">
 
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
+      <label for="email">Email Address</label>
+      <input id="email" type="email" placeholder="Your email address">
 
-        <div class="contact-info">
-            <h2>Visit or Reach Us</h2>
+      <label for="message">Message</label>
+      <textarea id="message" rows="5" placeholder="Write your message here"></textarea>
 
-            <div class="map-placeholder">
-                <img src="https://images.unsplash.com/photo-1502920917128-1aa500764b88?w=1200" 
-                     alt="Map Image">
-            </div>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
 
-            <div class="support-details">
-                <h3>Support Contacts</h3>
-                <p><strong>Email:</strong> support@drivehubmotors.fake</p>
-                <p><strong>Phone:</strong> +254 701 234 567</p>
-                <p><strong>Office Address:</strong><br>
-                    1234 Westlands Avenue,<br>
-                    Nairobi, Kenya
-                </p>
-            </div>
-        </div>
-    </section>
-
-    <p class="portfolio-note">
-        This website is a group coding portfolio project created for learning purposes only.
-        All details, contacts, and images are placeholders.
-    </p>
-
-    <footer>
-        <p>© 2025 DriveHub Motors — All Rights Reserved</p>
-    </footer>
+  <!-- ======================= -->
+  <!--         FOOTER         -->
+  <!-- ======================= -->
+  <footer>
+    <p>© 2025 DriveHub Motors — All Rights Reserved</p>
+  </footer>
 
 </body>
 </html>
