--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DriveHub Motors - Home</title>
 
-  <!-- Link Your CSS Files -->
+  <!-- Link CSS -->
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -13,96 +13,91 @@
 <body>
 
   <!-- ======================= -->
-  <!--        HEADER / NAV     -->
+  <!-- HEADER / NAVIGATION -->
   <!-- ======================= -->
   <header>
     <nav>
       <div class="logo">
-        <h2>DriveHub Motors</h2>
+        <h1>DriveHub Motors</h1>
       </div>
 
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="cars.html">Cars</a></li>
+        <li><a href="listing.html">Car Listing</a></li>
+        <li><a href="car-details.html">Car Details</a></li>
         <li><a href="cart.html">Cart</a></li>
         <li><a href="checkout.html">Checkout</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <!-- ======================= -->
-  <!--       HERO SECTION      -->
+  <!-- HERO SECTION -->
   <!-- ======================= -->
   <section class="hero">
-    <h1>Find Your Dream Car</h1>
-    <p>Premium vehicles, trusted dealers, and unbeatable prices.</p>
+    <img src="assets/hero-banner.jpg" alt="DriveHub Motors Banner">
 
-    <div class="hero-buttons">
-      <a href="cars.html">Shop Now</a>
-      <a href="car-listing.html">View Cars</a>
+    <div class="hero-content">
+      <h1>Find Your Dream Car Today</h1>
+      <p>Premium cars. Affordable prices. Trusted service.</p>
+
+      <div class="hero-buttons">
+        <a href="cars.html">Shop Now</a>
+        <a href="listing.html">View Cars</a>
+      </div>
     </div>
   </section>
 
   <!-- ======================= -->
-  <!--   FEATURED VEHICLES     -->
+  <!-- FEATURED VEHICLES -->
   <!-- ======================= -->
   <section class="featured">
     <h2>Featured Vehicles</h2>
 
-    <div class="featured-grid">
-
-      <!-- Card 1 -->
+    <div class="car-grid">
+      <!-- CAR 1 -->
       <div class="car-card">
-        <div class="image-placeholder">IMAGE</div>
-        <h3>Car Model Name</h3>
-        <p>Price: $25,000</p>
-        <p>Short description about the car goes here.</p>
+        <div class="img-box">Image</div>
+        <h3>Car Model 1</h3>
+        <p>$25,000</p>
+        <span>High performance and comfort.</span>
       </div>
 
-      <!-- Card 2 -->
+      <!-- CAR 2 -->
       <div class="car-card">
-        <div class="image-placeholder">IMAGE</div>
-        <h3>Car Model Name</h3>
-        <p>Price: $32,000</p>
-        <p>Short description about the car goes here.</p>
+        <div class="img-box">Image</div>
+        <h3>Car Model 2</h3>
+        <p>$32,000</p>
+        <span>Sporty, stylish, and powerful.</span>
       </div>
 
-      <!-- Card 3 -->
+      <!-- CAR 3 -->
       <div class="car-card">
-        <div class="image-placeholder">IMAGE</div>
-        <h3>Car Model Name</h3>
-        <p>Price: $18,000</p>
-        <p>Short description about the car goes here.</p>
+        <div class="img-box">Image</div>
+        <h3>Car Model 3</h3>
+        <p>$18,000</p>
+        <span>Affordable and reliable choice.</span>
       </div>
-
     </div>
   </section>
 
   <!-- ======================= -->
-  <!--      SHOP CTA BANNER    -->
+  <!-- SHOP CTA BANNER -->
   <!-- ======================= -->
   <section class="shop-cta">
-    <h2>Ready to Browse More Vehicles?</h2>
-    <p>Explore our entire collection and find the perfect ride.</p>
-    <a href="cars.html">Browse Cars</a>
+    <h2>Browse Our Full Car Collection</h2>
+    <a href="cars.html">Explore Cars</a>
   </section>
 
   <!-- ======================= -->
-  <!--          FOOTER         -->
+  <!-- FOOTER -->
   <!-- ======================= -->
   <footer>
-    <p>Contact: drivehub@example.com | +123 456 7890</p>
     <p>© 2025 DriveHub Motors — All Rights Reserved</p>
   </footer>
-
-  <!-- ======================= -->
-  <!--     LINK JS FILES       -->
-  <!-- ======================= -->
-  <script src="scripts/app.js"></script>
-  <script src="scripts/cart.js"></script>
-  <script src="scripts/checkout.js"></script>
-  <script src="scripts/data.js"></script>
 
 </body>
 </html>
