--- a/index.html
+++ b/index.html
@@ -5,99 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DriveHub Motors - Home</title>
 
-  <!-- Link CSS -->
-  <link rel="stylesheet" href="styles/navbar.css">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/navbar.css" />
+  <link rel="stylesheet" href="styles/main.css" />
 </head>
-
 <body>
 
-  <!-- ======================= -->
-  <!-- HEADER / NAVIGATION -->
-  <!-- ======================= -->
-  <header>
-    <nav>
-      <div class="logo">
-        <h1>DriveHub Motors</h1>
-      </div>
-
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="cars.html">Cars</a></li>
-        <li><a href="listing.html">Car Listing</a></li>
-        <li><a href="car-details.html">Car Details</a></li>
-        <li><a href="cart.html">Cart</a></li>
-        <li><a href="checkout.html">Checkout</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- ======================= -->
-  <!-- HERO SECTION -->
-  <!-- ======================= -->
-  <section class="hero">
-    <img src="assets/hero-banner.jpg" alt="DriveHub Motors Banner">
-
-    <div class="hero-content">
-      <h1>Find Your Dream Car Today</h1>
-      <p>Premium cars. Affordable prices. Trusted service.</p>
-
-      <div class="hero-buttons">
-        <a href="cars.html">Shop Now</a>
-        <a href="listing.html">View Cars</a>
-      </div>
+<header>
+  <nav>
+    <div class="logo">
+      <h1>DriveHub Motors</h1>
     </div>
-  </section>
 
-  <!-- ======================= -->
-  <!-- FEATURED VEHICLES -->
-  <!-- ======================= -->
-  <section class="featured">
-    <h2>Featured Vehicles</h2>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="cars.html">Cars</a></li>
+      <li><a href="carlisting.html">Car Listing</a></li>
+      <li><a href="checkout.html">Checkout</a></li>
+      <li><a href="cart.html">Cart</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
-    <div class="car-grid">
-      <!-- CAR 1 -->
-      <div class="car-card">
-        <div class="img-box">Image</div>
-        <h3>Car Model 1</h3>
-        <p>$25,000</p>
-        <span>High performance and comfort.</span>
-      </div>
+<section class="hero">
+  <h2>Find Your Dream Car Today</h2>
+  <p>Great prices. Quality vehicles. Trusted dealership.</p>
 
-      <!-- CAR 2 -->
-      <div class="car-card">
-        <div class="img-box">Image</div>
-        <h3>Car Model 2</h3>
-        <p>$32,000</p>
-        <span>Sporty, stylish, and powerful.</span>
-      </div>
+  <div class="hero-btns">
+    <a href="cars.html">Shop Now</a>
+    <a href="carlisting.html">View Cars</a>
+  </div>
+</section>
 
-      <!-- CAR 3 -->
-      <div class="car-card">
-        <div class="img-box">Image</div>
-        <h3>Car Model 3</h3>
-        <p>$18,000</p>
-        <span>Affordable and reliable choice.</span>
-      </div>
+<section class="featured">
+  <h2>Featured Vehicles</h2>
+
+  <div class="car-grid">
+
+    <div class="car-card">
+      <div class="img-box">Image</div>
+      <h3>Toyota Land Cruiser</h3>
+      <p>$45,000</p>
     </div>
-  </section>
 
-  <!-- ======================= -->
-  <!-- SHOP CTA BANNER -->
-  <!-- ======================= -->
-  <section class="shop-cta">
-    <h2>Browse Our Full Car Collection</h2>
-    <a href="cars.html">Explore Cars</a>
-  </section>
+    <div class="car-card">
+      <div class="img-box">Image</div>
+      <h3>Mercedes C200</h3>
+      <p>$30,000</p>
+    </div>
 
-  <!-- ======================= -->
-  <!-- FOOTER -->
-  <!-- ======================= -->
-  <footer>
-    <p>© 2025 DriveHub Motors — All Rights Reserved</p>
-  </footer>
+    <div class="car-card">
+      <div class="img-box">Image</div>
+      <h3>BMW X5</h3>
+      <p>$52,000</p>
+    </div>
+
+  </div>
+</section>
+
+<section class="shop-cta">
+  <h2>Browse Our Full Car Collection</h2>
+  <a href="cars.html">Explore Cars</a>
+</section>
+
+<footer>
+  <p>© 2025 DriveHub Motors — All Rights Reserved</p>
+</footer>
 
 </body>
 </html>
