--- a/index.html
+++ b/index.html
@@ -1,77 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DriveHub Motors - Home</title>
-
-  <link rel="stylesheet" href="styles/navbar.css" />
-  <link rel="stylesheet" href="styles/main.css" />
+  <meta charset="UTF-8">
+  <title>Test Cars - Minimal</title>
 </head>
 <body>
 
-<header>
-  <nav>
-    <div class="logo">
-      <h1>DriveHub Motors</h1>
-    </div>
+  <h2>Mercedes C‑Class</h2>
+  <img 
+    src="https://images.unsplash.com/photo-1503376781347-4b98f7e60a07?ixlib=rb-4.0.3&auto=format&fit=crop&w=1080&q=80"
+    alt="Mercedes C-Class">
 
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="cars.html">Cars</a></li>
-      <li><a href="carlisting.html">Car Listing</a></li>
-      <li><a href="checkout.html">Checkout</a></li>
-      <li><a href="cart.html">Cart</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
+  <h2>Toyota-style Sedan</h2>
+  <img 
+    src="https://images.unsplash.com/photo-1619405399511-82672291e3c0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1080&q=80"
+    alt="Sedan Car">
 
-<section class="hero">
-  <h2>Find Your Dream Car Today</h2>
-  <p>Great prices. Quality vehicles. Trusted dealership.</p>
-
-  <div class="hero-btns">
-    <a href="cars.html">Shop Now</a>
-    <a href="carlisting.html">View Cars</a>
-  </div>
-</section>
-
-<section class="featured">
-  <h2>Featured Vehicles</h2>
-
-  <div class="car-grid">
-
-    <div class="car-card">
-      <div class="img-box">Image</div>
-      <h3>Toyota Land Cruiser</h3>
-      <p>$45,000</p>
-    </div>
-
-    <div class="car-card">
-      <div class="img-box">Image</div>
-      <h3>Mercedes C200</h3>
-      <p>$30,000</p>
-    </div>
-
-    <div class="car-card">
-      <div class="img-box">Image</div>
-      <h3>BMW X5</h3>
-      <p>$52,000</p>
-    </div>
-
-  </div>
-</section>
-
-<section class="shop-cta">
-  <h2>Browse Our Full Car Collection</h2>
-  <a href="cars.html">Explore Cars</a>
-</section>
-
-<footer>
-  <p>© 2025 DriveHub Motors — All Rights Reserved</p>
-</footer>
+  <h2>BMW (for example)</h2>
+  <img 
+    src="https://images.unsplash.com/photo-1525609004556-c46c7d6cf023?ixlib=rb-4.0.3&auto=format&fit=crop&w=1080&q=80"
+    alt="BMW Car">
 
 </body>
 </html>
+
