--- a/index.html
+++ b/index.html
@@ -1,26 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Test Cars - Minimal</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DriveHub Motors</title>
+
+  <!-- Link the CSS file -->
+  <link rel="stylesheet" href="styles/index.css" />
 </head>
+
 <body>
 
-  <h2>Mercedes C‑Class</h2>
-  <img 
-    src="https://images.unsplash.com/photo-1503376781347-4b98f7e60a07?ixlib=rb-4.0.3&auto=format&fit=crop&w=1080&q=80"
-    alt="Mercedes C-Class">
+  <!-- HEADER -->
+  <header>
+    <nav class="navbar">
+      <h1 class="logo">DriveHub Motors</h1>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="cars.html">Cars</a></li>
+        <li><a href="checkout.html">Checkout</a></li>
+        <li><a href="cart.html">Cart</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <h2>Toyota-style Sedan</h2>
-  <img 
-    src="https://images.unsplash.com/photo-1619405399511-82672291e3c0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1080&q=80"
-    alt="Sedan Car">
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <div class="hero-content">
+      <h2>Your Dream Car Awaits</h2>
+      <p>Premium cars at the best prices — only at DriveHub Motors.</p>
+      <a href="cars.html" class="btn">Browse Cars</a>
+    </div>
+  </section>
 
-  <h2>BMW (for example)</h2>
-  <img 
-    src="https://images.unsplash.com/photo-1525609004556-c46c7d6cf023?ixlib=rb-4.0.3&auto=format&fit=crop&w=1080&q=80"
-    alt="BMW Car">
+  <!-- CAR LISTING SECTION (THIS IS WHAT YOU WANTED!) -->
+  <section class="featured-cars">
+    <h2 class="section-title">Featured Vehicles</h2>
+
+    <div class="car-grid">
+
+      <!-- CAR 1 -->
+      <div class="car-card">
+        <img src="images/car1.jpg" alt="Car 1" />
+        <h3>Toyota Land Cruiser</h3>
+        <p class="price">$45,000</p>
+        <a href="cars.html" class="btn">View More</a>
+      </div>
+
+      <!-- CAR 2 -->
+      <div class="car-card">
+        <img src="images/car2.jpg" alt="Car 2" />
+        <h3>Mercedes C200</h3>
+        <p class="price">$30,000</p>
+        <a href="cars.html" class="btn">View More</a>
+      </div>
+
+      <!-- CAR 3 -->
+      <div class="car-card">
+        <img src="images/car3.jpg" alt="Car 3" />
+        <h3>BMW X5</h3>
+        <p class="price">$52,000</p>
+        <a href="cars.html" class="btn">View More</a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 DriveHub Motors. All Rights Reserved.</p>
+  </footer>
 
 </body>
 </html>
+
 
