--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="checkout.html">Checkout</a></li>
         <li><a href="cart.html">Cart</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
   </header>
