Abdirahman(solo) Completed this task

--- a/car-details.html
+++ b/car-details.html
@@ -1,3 +1,139 @@
 <!-- car-details.html - -->
 <h1>Car Details</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DriveHub Motors | Mercedes‑Benz S‑Class 2022</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+
+  <!-- Header/Nav -->
+  <header>
+    <div class="container header-content">
+      <div class="logo">
+        <i class="fas fa-car"></i>
+        <div>
+          <h1>DriveHub <span>Motors</span></h1>
+          <p class="tagline">Luxury automotive excellence since 1995</p>
+        </div>
+      </div>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="cars.html">Cars</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="cart.html">Cart</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Car Detail Section -->
+  <main class="car-details-page container">
+    <div class="car-overview">
+      <div class="car-image-gallery">
+        <!-- main image -->
+        <img src="assets/images/mercedes-s-class-2022-1.jpg"
+             alt="Mercedes‑Benz S‑Class 2022 – front view"
+             class="main-image">
+        <!-- thumbnails -->
+        <div class="thumbnails">
+          <img src="assets/images/mercedes-s-class-2022-2.jpg" alt="Side view">
+          <img src="assets/images/mercedes-s-class-2022-3.jpg" alt="Rear view">
+          <img src="assets/images/mercedes-s-class-2022-4.jpg" alt="Interior view">
+        </div>
+      </div>
+
+      <div class="car-info">
+        <h2>Mercedes‑Benz S‑Class 2022</h2>
+        <p class="price">$115,000</p>
+        <p class="description">
+          The 2022 Mercedes‑Benz S‑Class embodies ultimate luxury and cutting‑edge technology — an elegant blend of comfort, power, and sophistication. Equipped with a refined interior, powerful engine, and seamless performance, it's a top choice for discerning buyers.
+        </p>
+
+        <h3>Specifications</h3>
+        <ul class="specs-list">
+          <li><strong>Year:</strong> 2022</li>
+          <li><strong>Fuel:</strong> Gasoline</li>
+          <li><strong>Transmission:</strong> Automatic</li>
+          <li><strong>Mileage:</strong> 12,500 mi</li>
+          <li><strong>Horsepower:</strong> 496 HP</li>
+          <li><strong>Type:</strong> Sedan</li>
+        </ul>
+
+        <div class="actions">
+          <button class="btn btn-add-cart">Add to Cart</button>
+          <button class="btn btn-favorite"><i class="far fa-heart"></i> Add to Wishlist</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Related Cars Section -->
+    <section class="related-cars">
+      <h3>Related Vehicles</h3>
+      <div class="car-cards">
+        <div class="car-card">
+          <img src="assets/images/bmw-x7-m50i-2023.jpg" alt="BMW X7 M50i 2023">
+          <h4>BMW X7 M50i 2023</h4>
+          <p>$105,000 • SUV • Automatic</p>
+          <a href="car-details.html" class="btn-details">View Details</a>
+        </div>
+        <div class="car-card">
+          <img src="assets/images/audi-rs7-2021.jpg" alt="Audi RS7 Sportback 2021">
+          <h4>Audi RS7 Sportback 2021</h4>
+          <p>$125,000 • Sports • Automatic</p>
+          <a href="car-details.html" class="btn-details">View Details</a>
+        </div>
+        <div class="car-card">
+          <img src="assets/images/porsche-911-carrera-s-2020.jpg" alt="Porsche 911 Carrera S 2020">
+          <h4>Porsche 911 Carrera S 2020</h4>
+          <p>$135,000 • Coupe • Semi‑Auto</p>
+          <a href="car-details.html" class="btn-details">View Details</a>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container footer-content">
+      <div class="footer-section">
+        <h3>DriveHub Motors</h3>
+        <p>Providing exceptional luxury vehicles for over 25 years.</p>
+      </div>
+      <div class="footer-section">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="cars.html">Inventory</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="cart.html">Cart</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Contact Us</h3>
+        <ul>
+          <li><i class="fas fa-map-marker-alt"></i> 1234 Westlands Avenue, Nairobi, Kenya</li>
+          <li><i class="fas fa-phone"></i> +254 701 234 567</li>
+          <li><i class="fas fa-envelope"></i> support@drivehubmotors.fake</li>
+        </ul>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>&copy; 2025 DriveHub Motors. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <!-- JS (optional) -->
+  <script src="scripts/car-details.js" defer></script>
+
+</body>
+</html>
+    <p class="portofolio-note" > This website is only a portofolio project and not meant use for commercial purposes</p>
 
