--- a/index.html
+++ b/index.html
@@ -49,24 +49,34 @@
             <h2>Featured Vehicles</h2>
             <div class="car-cards">
                 <div class="car-card">
-                    <img src="assets/images/cars/mercedes-s-class.jpg" alt="Mercedes S-Class 2022">
+                    <img src="https://i.pinimg.com/1200x/3e/44/a2/3e44a2ae429c533371add5dae7a85163.jpg" alt="Mercedes S-Class 2022">
                     <h3>Mercedes-Benz S-Class 2022</h3>
                     <p>$115,000 • Sedan • Automatic</p>
                     <a href="car-details.html?id=1" class="btn-details">View Details</a>
                 </div>
                 <div class="car-card">
-                    <img src="assets/images/cars/bmw-x7-m50i.jpg" alt="BMW X7 M50i 2023">
+                    <img src="https://i.pinimg.com/736x/b5/38/91/b538913e20b55b100615d259622ce7ef.jpg" alt="BMW X7 M50i 2023">
                     <h3>BMW X7 M50i 2023</h3>
                     <p>$105,000 • SUV • Automatic</p>
                     <a href="car-details.html?id=2" class="btn-details">View Details</a>
                 </div>
                 <div class="car-card">
-                    <img src="assets/images/cars/audi-rs7.jpg" alt="Audi RS7 Sportback 2021">
+                    <img src="https://i.pinimg.com/736x/b3/21/bd/b321bd09d3f8580b248d1d87f2fcf39d.jpg" alt="Audi RS7 Sportback 2021">
                     <h3>Audi RS7 Sportback 2021</h3>
                     <p>$125,000 • Sports • Automatic</p>
                     <a href="car-details.html?id=3" class="btn-details">View Details</a>
                 </div>
-            </div>
+                <div class="car-card">
+                    <img src="https://i.pinimg.com/736x/f9/23/5c/f9235ca1a91c153c834bed446b5532fa.jpg" alt="Lexus RX 500h 2022">
+                    <h3>Lexus RX 500h 2022</h3>
+                    <p>$70,000 • SUV • Hybrid</p>
+                    <a href="car-details.html?id=4" class="btn-details">View Details</a> 
+             </div>
+                 <div class="car-card">
+                    <img src="https://i.pinimg.com/736x/1c/30/96/1c309666cafc8c1b8c5f4ebbf3b157c2.jpg">
+                    <h3>Porsche 911 Carrera 2021</h3>
+                    <p>$99,000 • Sports • Manual</p>
+                    <a href="car-details.html?id=5" class="btn-details">View Details</a>
         </div>
     </section>
 
