abdullahi has updated

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <div class="container">
             <h2>About DriveHub Motors</h2>
             <p>At DriveHub Motors, we are committed to providing luxury vehicles with unmatched quality and service. Our selection spans high-performance sports cars, elegant sedans, and versatile SUVs.</p>
+            <P>DriveHub Motors is built on one simple mission — to make finding your next car easy, trustworthy, and enjoyable. We connect buyers with high-quality vehicles, transparent information, and a smooth shopping experience from start to finish. Whether youre looking for a first car, a family upgrade, or a luxury ride, DriveHub Motors is committed to offering reliable options, honest guidance, and professional service. With a focus on customer satisfaction and long-term relationships, we aim to be the hub where confidence meets convenience in the world of car buying.</P>
             <a href="about.html" class="btn-cta">Learn More</a>
         </div>
     </section>
