Abdirahman has updated Abdullahi's files by small changes

--- a/about.html
+++ b/about.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DriveHub Motors | About Us</title>
 
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="mainbar.css">
+    <link rel="stylesheet" href="styles/about.css">
 </head>
 <body>
 
@@ -14,7 +13,7 @@
     <header>
         <nav class="navbar">
             <div class="logo-area">
-                <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?w=600" alt="DriveHub Motors Logo">
+                <img src="https://shmector.com/_ph/13/853993434.png" alt="DriveHub Motors Logo">
                 <h1>DriveHub Motors</h1>
             </div>
 
@@ -24,7 +23,7 @@
 
     <!-- Banner -->
     <section class="hero-banner">
-        <img src="https://images.unsplash.com/photo-1549921296-3b4a6b6caadf?w=1600" 
+        <img src="https://images.presentationgo.com/2025/04/black-sports-car-night-city.jpg" 
              alt="About DriveHub Motors Banner">
         <div class="banner-text">
             <h2>About Us</h2>
