--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,7 @@
   <title>Contact - DriveHub Motors</title>
 
   <!-- Link Your CSS Files -->
-  <link rel="stylesheet" href="styles/navbar.css">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/contact.css">
 </head>
 
 <body>
@@ -29,7 +28,7 @@
   <!--      CONTACT BANNER    -->
   <!-- ======================= -->
   <section class="contact-banner">
-    <img src="assets/contact-banner.jpg" alt="DriveHub Motors Contact Banner">
+    <img src="https://images.vexels.com/media/users/3/154661/isolated/preview/7288653d1853bbc9f5e2a844ffadb763-luxury-car-side-view-silhouette.png" alt="DriveHub Motors Contact Banner">
   </section>
 
   <!-- ======================= -->
