--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DriveHub Motors | Home</title>
     <!-- Link main CSS -->
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/index.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -94,7 +94,10 @@
     <section class="cta">
         <div class="container">
             <h2>Ready to Own Your Dream Car?</h2>
-            <p>Browse our inventory or contact us for exclusive offers and financing options.</p>
+            <p>Browse our inventory or contact us for exclusive offers and financing options. </p>
+            <p>We are here to help you find the perfect vehicle tht suits according to your needs and budget.</p> 
+            <p>Contact us today to schedule a test drive or get more information about our vehicles</p>
+            <p> We look forward to serving you and helping you find your dream car at DriveHub Motors.
             <a href="cars.html" class="btn-cta">Browse Inventory</a>
             <a href="contact.html" class="btn-cta secondary">Contact Us</a>
         </div>
@@ -106,7 +109,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>DriveHub Motors</h3>
-                    <p>Providing exceptional luxury vehicles for over 25 years.</p>
+                    <p>Providing exceptional luxury vehicles and service since 1995</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
