abdullahi has updated

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <li><a href="cars.html">Best Deals</a></li>
                         <li><a href="contact.html">Sell Your Car</a></li>
                         <li><a href="checkout.html">Financing</a></li>
-                        <li><a href="cars.html
+                        <li><a href="cart.html">rentals</a></li>
 
 
 
